--- a/CS105 - Osnove Web Tehnologije/Domaci14/index.html
+++ b/CS105 - Osnove Web Tehnologije/Domaci14/index.html
@@ -2,41 +2,17 @@
     <head>
         <title>CS105 - Domaci 14</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="sda.js"></script>
     </head>
-    <body>
+    <body onload="generateTable()">
         <header id="header">
             <h2>Courage The Dog - Prodavnica</h2>
         </header>
         <div id="content">
-            <div id="proizvodi">
-                <div class="proizvod">
-                    <img src="slike/3.png" alt="">
-                    <p>Narandzasta Majica</p>
-                    <p>1300.00 RSD</p>
-                    <button class="fav">DODAJ U FAVORITE</button>
-                </div>
-                <div class="proizvod">
-                    <img src="slike/6.png" alt="">
-                    <p>Zelena Majica</p>
-                    <p>1700.00 RSD</p>
-                    <button class="fav">DODAJ U FAVORITE</button>
-                </div>
-                <div class="proizvod">
-                    <img src="slike/1.png" alt="">
-                    <p>Bela Majica</p>
-                    <p>200.00 RSD</p>
-                    <button class="fav">DODAJ U FAVORITE</button>
-                </div>
-                <div class="proizvod">
-                    <img src="slike/5.png" alt="">
-                    <p>Ljubicasta Majica</p>
-                    <p>399.00 RSD</p>
-                    <button class="fav">DODAJ U FAVORITE</button>
-                </div>
-            </div>
-            <div id="omiljeno">
-                <h1>OMILJENO</h1>
-            </div>
+            <p><span id="pecko">Petar</span> je car ovo je samo test</p>
+            <table id="myTable">
+
+            </table>
         </div>
         <div id="footer">
             <h2>Petar Otovic 5460</h2>
